--- a/src/Properties/launchSettings.json
+++ b/src/Properties/launchSettings.json
@@ -14,7 +14,8 @@
       "launchBrowser": true,
       "applicationUrl": "http://localhost:5029",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "ENV_TEST": "Local test"
       }
     },
     "IIS Express": {
